# rusty-tricks

./: .gitignore  Cargo.toml  README.md
bases/: README.md
bases/src/: main.rs
borrow/src/: main.rs
carpool/: Cargo.toml
carpool/src/: main.rs
casts/: Cargo.toml  README.md
casts/src/: main.rs
commands/: Cargo.toml
commands/tests/: commands.rs
complex/: README.md
complex/src/: main.rs
errors/src/: docs.rs  main.rs
float/: README.md
float/src/: main.rs
genenums/: Cargo.toml
genenums/src/: main.rs
generics/src/: main.rs
grepex/: Cargo.toml
grepex/src/: main.rs
guess/: Cargo.toml
guess/src/: main.rs
hello/: Cargo.toml  README.md
hello/src/: main.rs
isflow/: Cargo.toml
isflow/src/: main.rs
letels/: Cargo.toml
lifetimes/src/: main.rs
loops/src/: main.rs
mandelbrot/src/: main.rs
monsters/: Cargo.toml
monsters/src/: main.rs
mutrefs/: Cargo.toml
mutrefs/src/: main.rs
noisy/: Cargo.toml
noisy/src/: main.rs
nonan/: Cargo.toml  README.md
nonan/src/: main.rs
option/src/: main.rs
panic/src/: main.rs
question/: Cargo.toml
question/src/: main.rs
reredis/: Cargo.toml
reredis/src/: main.rs
result/: Cargo.toml
result/src/: main.rs
safety/: Cargo.toml
scores/src/: main.rs
sketches/: Cargo.toml
sketches/src/: main.rs
slice/src/: main.rs
sqlite/: Cargo.toml  README.md
sqlite/src/: main.rs
src/: main.rs
unreachable/: Cargo.toml
unreachable/src/: main.rs
words/: Cargo.toml
words/src/: main.rs
